// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventOnlineThumbnail /> it renders correctly when no replay is published 1`] = `""`;

exports[`<EventOnlineThumbnail /> it renders correctly when not started 1`] = `
<Thumbnail
  height="400px"
  width="100%"
>
  <EventOnlineThumbnailstyle__DateLiveContainer>
    <IconRounded
      color="#fff"
      size={36}
    >
      <Icon
        color="#707070"
        name="calendar"
        size={18}
      />
    </IconRounded>
    <EventOnlineThumbnailstyle__Date>
      <span>
        <strong>
          <FormattedMessage
            id="live.in"
            values={Object {}}
          />
           
          <Component
            unit="year"
            value={3}
          />
        </strong>
      </span>
      <span>
        <FormattedDate
          day="numeric"
          month="long"
          value={2025-04-06T22:00:00.000Z}
          year="numeric"
        />
         
        <FormattedTime
          hour="numeric"
          minute="numeric"
          second="numeric"
          value={2025-04-06T22:00:00.000Z}
        />
      </span>
    </EventOnlineThumbnailstyle__Date>
  </EventOnlineThumbnailstyle__DateLiveContainer>
</Thumbnail>
`;

exports[`<EventOnlineThumbnail /> it renders correctly when not started and animator 1`] = `
<Thumbnail
  height="400px"
  width="100%"
>
  <EventOnlineThumbnailstyle__DateLiveContainer>
    <IconRounded
      color="#fff"
      size={36}
    >
      <Icon
        color="#707070"
        name="calendar"
        size={18}
      />
    </IconRounded>
    <EventOnlineThumbnailstyle__Date>
      <span>
        <strong>
          <FormattedMessage
            id="live.in"
            values={Object {}}
          />
           
          <Component
            unit="year"
            value={3}
          />
        </strong>
      </span>
      <span>
        <FormattedDate
          day="numeric"
          month="long"
          value={2025-04-06T22:00:00.000Z}
          year="numeric"
        />
         
        <FormattedTime
          hour="numeric"
          minute="numeric"
          second="numeric"
          value={2025-04-06T22:00:00.000Z}
        />
      </span>
    </EventOnlineThumbnailstyle__Date>
  </EventOnlineThumbnailstyle__DateLiveContainer>
  <EventOnlineThumbnailstyle__ButtonJoin
    id="jitsi-join-button"
    onClick={[MockFunction]}
    type="button"
  >
    <Icon
      className="mr-10 join-icon"
      color="#fff"
      name="join"
      size={14}
    />
    <FormattedMessage
      id="join.the.stream"
      values={Object {}}
    />
  </EventOnlineThumbnailstyle__ButtonJoin>
</Thumbnail>
`;

exports[`<EventOnlineThumbnail /> it renders correctly when replay is published 1`] = `
<div
  id="jitsi-replay-container"
>
  <video
    controls={true}
    height="400px"
    width="100%"
  >
    <source
      src="<mocked-replay-url/>"
      type="video/mp4"
    />
    <track
      kind="captions"
    />
  </video>
</div>
`;

exports[`<EventOnlineThumbnail /> it renders correctly when replay is published but the recording URL is empty 1`] = `""`;

exports[`<EventOnlineThumbnail /> it renders nothing when live and joined 1`] = `""`;

exports[`<EventOnlineThumbnail /> it renders nothing when live and not joined 1`] = `
<Thumbnail
  height="400px"
  width="100%"
>
  <EventOnlineThumbnailstyle__ButtonJoin
    id="jitsi-join-button"
    onClick={[MockFunction]}
    type="button"
  >
    <Icon
      className="mr-10 join-icon"
      color="#fff"
      name="join"
      size={14}
    />
    <FormattedMessage
      id="join.the.stream"
      values={Object {}}
    />
  </EventOnlineThumbnailstyle__ButtonJoin>
</Thumbnail>
`;
